<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="@string/text15"
            android:background="#fff"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:background="#F1EAEA"
            android:text="@string/text16"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:background="#CAC3C3"
            android:text="@string/text17"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:background="#ACA5A5"
            android:text="@string/text18"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:background="#9E8C8C"
            android:text="@string/text19"
            android:textSize="30sp"/>

    </LinearLayout>

</ScrollView>