<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".LinearLayout">

   <TextView
       android:id="@+id/mTV1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/text5"
       android:textSize="30sp"
       android:gravity="center"/>

    <TextView
        android:id="@+id/mTV2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text6"
        android:gravity="center"
        />

    <Button
        android:id="@+id/mBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text7"
        android:layout_marginTop="30dp"
        />




</LinearLayout>