<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="3"
    tools:context=".GridLayout">

    <Button
        android:layout_column="0"
        android:layout_row="0"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/text2"
        android:onClick="ClickBtn"
        android:textAllCaps="false"
        />
    <Button
        android:layout_column="0"
        android:layout_row="1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/text10"
        />
    <Button
        android:layout_column="0"
        android:layout_row="2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/text11"
        />
    <Button
        android:layout_column="1"
        android:layout_row="0"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/text9"
        />
    <Button
        android:layout_column="1"
        android:layout_row="1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/text2"
        android:textAllCaps="false"
        android:onClick="ClickBtn"
        />
    <Button
        android:layout_column="1"
        android:layout_row="2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/text11"
        />
    <Button
        android:layout_column="2"
        android:layout_row="0"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/text9"
        />
    <Button
        android:layout_column="2"
        android:layout_row="1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/text10"
        />
    <Button
        android:layout_column="2"
        android:layout_row="2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/text2"
        android:textAllCaps="false"
        android:onClick="ClickBtn"
        />

</GridLayout>